[package]
name = "One-Month-Left-My-Last-Project"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
pnet = "0.35.0"
rdev = "0.5.3"
tokio = { version = "1.52.1", features = ["full"] }
windows-win = "3.0.0"
[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
  "Data_Xml_Dom",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
]
